[package]
name = "rust_mc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored="2.0.4"
  
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
serde_yaml = "0.9.25"
serde = { version = "1.0", features = ["derive"] }

rust-raknet = "*"


