[package]
name = "rbds_sdk"
version = "0.12.0"
edition = "2021"
authors = ["banchen <banchen8964@gmail.com>"]
description = "rust-raknet build to rbds_sdk"
repository = "github"
documentation = "github/doc"
readme = "README.md"
license = "MIT"
keywords = ["raknet", "networking" , "minecraft_sdk"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", features = ["std"]}
tokio = {version = "1.20.1", features = ["full"]}
bytes = "1.2.1"
wd_event="0.6.1"

log = "0.4.0"
env_logger = "0.10.0"
chrono="0.4.31"
