[package]
name = "rbds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbds_sdk={path="../"}
tokio = { version = "1", features = ["full"] }
rust-raknet="0.12.0"

libloading = "0.8.1"


log = "0.4.0"
futures = "0.1"
parallel-event-emitter = "0.2.4"